Don't render ID if null